[workspace]
members = [
    "mimi-pyo3",
    "moshi-backend",
    "moshi-cli",
    "moshi-core",
    "moshi-rag-backend",
    "moshi-server",
]
resolver = "2"

[workspace.package]
version = "0.6.4"
edition = "2021"
license = "MIT/Apache-2.0"
description = "moshi, a real-time voice AI"
repository = "https://github.com/kyutai-labs/moshi"
keywords = ["machine-learning", "audio"]
categories = ["science"]

# ---------------------------------------------------------------------------
# TLS architecture note & known `clippy::multiple_crate_versions` warnings
# (cargo clippy -- -W clippy::cargo)
#
# IMPORTANT — HOW THIS LINT WORKS:
#   clippy::multiple_crate_versions scans the ENTIRE workspace Cargo.lock,
#   not just the dep-tree of the crate being compiled.  Running it against any
#   single package (e.g. -p moshi-rag-backend) still reports workspace-wide
#   duplicates.  moshi-rag-backend itself has ZERO internal duplicate crates
#   (`cargo tree -p moshi-rag-backend --duplicates` → nothing to print).
#   All warnings listed below originate in OTHER workspace members.
#
# PREVIOUSLY FIXED — do not re-add these:
#   The dead direct workspace deps `rustls = "0.23.5"`, `tokio-rustls =
#   "0.24.1"`, and `axum-server` with `features = ["tls-rustls"]` were
#   removed because they were unused weight copied from the upstream
#   kyutai-labs repo but never actually imported in any source file.
#   `rustls = { workspace = true }` was removed from moshi-cli/Cargo.toml
#   for the same reason — every call site in moshi-cli/src/multistream.rs
#   explicitly uses `native_tls::TlsConnector` / `Connector::NativeTls`,
#   and no .rs file in moshi-cli ever imports the `rustls` crate.
#   The `"rustls"` feature was also removed from the `tokio-tungstenite`
#   workspace dep for the same reason — native-tls is the only TLS backend
#   actually called by moshi-cli code.
#
# REMAINING UNFIXABLE WARNINGS — DO NOT attempt to resolve until the stated
# external prerequisites are met.  All sources are in moshi-backend /
# moshi-server / moshi-core, not in moshi-rag-backend:
#
# 1. `getrandom 0.2.x` vs `0.3.x`
#    Three independent dep chains all pin getrandom 0.2; all three must be
#    resolved simultaneously to eliminate the duplicate:
#      a) hf-hub 0.4.3 features=["tokio"] internally enables reqwest's
#         rustls-tls-native-roots, pulling hyper-rustls → rustls 0.23 →
#         ring 0.17 → getrandom 0.2.  hf-hub is the HuggingFace model
#         download client used by moshi-backend and moshi-server.
#      b) moshi-core → tokenizers 0.15.2 → rand 0.8.5 → getrandom 0.2.
#    Note: async-openai was removed from all workspace members (path b originally
#    attributed to async-openai is now only tokenizers). Fix when: hf-hub
#    publishes a version that supports native-tls for its async backend
#    (eliminating path a); AND tokenizers updates to rand 0.9 (eliminating path b).
#    Ring side tracking: https://github.com/briansmith/ring/issues/2103
#
# 2. `wasi 0.11.x` vs `0.14.x`
#    Direct cascade from #1: getrandom 0.2 requires wasi 0.11; getrandom 0.3
#    requires wasi 0.14.  Same fix prerequisites as #1.
#
# 3. `core-foundation 0.9.x` vs `0.10.x`
# 4. `security-framework 2.x` vs `3.x`
# 5. `openssl-probe 0.1.x` vs `0.2.x`
#    reqwest 0.12.15 bundles BOTH native-tls and rustls-based TLS internally:
#      — native-tls 0.2.14 → security-framework 2.x → core-foundation 0.9.x
#        (reqwest's default-tls for direct connections)
#      — hyper-rustls 0.27 → rustls-native-certs → security-framework 3.x →
#        core-foundation 0.10.x (activated by hf-hub's tokio feature, #1a)
#    This means removing all explicit rustls workspace deps (already done)
#    did NOT fix these warnings: reqwest itself still brings in both TLS
#    stacks as long as hf-hub enables its rustls path.
#    Fix when: same as #1a (hf-hub native-tls mode).
#
# 6. `windows_i686_gnullvm 0.52.x` vs `0.53.x`
#    Windows cross-compilation artifact: different windows-sys minor versions
#    (0.52 vs 0.53) coexist via different transitive deps.  Zero effect on
#    macOS or Linux builds.  Resolves automatically as upstream crates converge.
# ---------------------------------------------------------------------------

[workspace.dependencies]
anyhow = "1"
axum = { version = "0.8.1", features = ["ws"] }
axum-server = "0.6"
base64 = "0.21.7"
base64ct = { version = "1.6.0", features = ["alloc"] }
bincode = "1.3.3"
byteorder = "1.5.0"
bytes = "1"
candle = { version = "0.9.1",  package = "candle-core" }
candle-flash-attn = "0.9.1"
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
clap = { version = "4.4.12", features = ["derive"] }
color-eyre = "0.6.2"
cpal = "0.15.3"
crossterm = { version = "0.27.0", features = ["event-stream"] }
env_logger = "0.10.1"
futures = "0.3.28"
futures-util = "0.3.30"
hf-hub = { version = "0.4.3", features = ["tokio"] }
http = "1.1.0"
kaudio = "0.2.1"
lazy_static = "1.5.0"
log = "0.4.20"
moshi = { path = "./moshi-core", version = "0.6.4" }
native-tls = "0.2.11"
numpy = "0.23.0"
ogg = { version = "0.9.1", features = ["async"] }
opus = "0.3.0"
prometheus = "0.13.4"
pyo3 = "0.23.0"
pyo3-ffi = "0.23.0"
rand = "0.9"
rand_chacha = "0.9"
ratatui = "0.27.0"
rayon = "1.8.1"
rcgen = "0.13.1"
regex = "1.10.3"
reqwest = { version = "0.12", features = ["json"] }
rmp-serde = "1.3.0"
rubato = "0.15.0"
sentencepiece = "0.11.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.115"
sha3 = "0.10.8"
symphonia = { version = "0.5.3", features = ["all"] }
tokenizers = "0.15.2"
tokio = { version = "1.35.1", features = ["full"] }
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
toml = "0.8.19"
tower = "0.4.13"
tower-http = { version = "0.5", features = ["full"] }
tracing = "0.1.40"
tracing-appender = "0.2.5"
tracing-chrome = "0.7.2"
tracing-subscriber = "0.3.18"
url = "2"
tui-logger = "0.11.2"
vergen = { version = "8.3.1", features = ["build", "cargo", "git", "gitcl", "rustc", "si"] }

[profile.release]
debug = true

[profile.release-no-debug]
inherits = "release"
debug = false
