[package]
name = "moshi-rag-backend"
version.workspace = true
edition.workspace = true
description = "moshi-rag backend service — trigger matching, action dispatch, optional LLM retrieval"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = false
publish = false

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true, features = ["json", "ws"] }
clap = { workspace = true }
futures-util = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
